# pathie-cpp

./: CMakeLists.txt  Config.cmake.in
debian/: changelog  control  rules
include/pathie/: entry_iterator.hpp  path.hpp  pathie_ifstream.hpp  pathie_ofstream.hpp  temp.hpp
src/: entry_iterator.cpp  errors.cpp  path.cpp  pathie.cpp  pathie_ifstream.cpp  pathie_ofstream.cpp  temp.cpp
